fix letter-spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 html {
     font-size: 24px;
     position: relative;
+    letter-spacing: 0.05em;
 }
 @media screen and (max-width: 768px) {
     html {
@@ -73,7 +74,6 @@ body {
     line-height: 1.0em;
     padding-top: 9px;
     padding-bottom: 9px;
-    letter-spacing: 0.05em;
 }
 .section_title div {
     display: block;
@@ -171,7 +171,6 @@ body {
     font-family: 'Patrick Hand', cursive;
     font-size: 50px;
     line-height: 1.5em;
-    letter-spacing: 0.05em;
 }
 #header.fixed {
     background-color: #9D8154;
@@ -316,7 +315,6 @@ body {
     font-family: 'Patrick Hand', cursive;
     font-size: 100px;
     line-height: 1.5em;
-    letter-spacing: 0.05em;
     text-align: center;
     position: absolute;
     top: 465px;
@@ -354,7 +352,6 @@ body {
     display: inline-block;
     vertical-align: middle;
     line-height: 1.5rem;
-    letter-spacing: 0.005em;
 }
 .concept li {
     margin-bottom: 30px;
@@ -373,7 +370,6 @@ body {
         width: 100%;
         display: block;
         line-height: 1.5rem;
-        letter-spacing: 0.005em;
         text-align: center;
     }
     .concept li {
@@ -790,7 +786,6 @@ body {
     width: calc(100% - 40px);
     font-size: 0.75rem;
     line-height: 2.22em;
-    letter-spacing: 0.05em;
 }
 .menu .colum a {
     display: block;
@@ -957,7 +952,6 @@ body {
 }
 .reserve_info .tell span {
     margin-left: 60px;
-    letter-spacing: 0.05em;
 }
 .reserve_info .hb_link {
     display: block;
@@ -1175,7 +1169,6 @@ body {
     font-family: 'Patrick Hand', cursive;
     font-size: 1.0rem;
     line-height: 1.5rem;
-    letter-spacing: 0.005em;
     border-bottom: #9D8154 4px dotted;
 }
 .access_top .salon_info dl {
